# lwstreams

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.org
examples/simple/: CMakeLists.txt  main.cpp
src/lwstreams/: buffers.cpp  buffers.h  circular_streams.h  copier.cpp  copier.h  counting_reader.h  debug.cpp  debug.h  direct_streams.h  lwstreams.h  protobuf.h  ring_buffers.h  streams.cpp  streams.h  varint_streams.cpp  varint_streams.h  varints.h
test/: CMakeLists.txt  counting_reader.h  pbtest.cpp  pbtest.h  test_streams.cpp  test_streams.h
test/protocol/: test.pb.c  test.pb.h  test.proto
